# Buddy-Beacon

./: .cproject  .gitignore  .mxproject  .project  FinalLoraRecieve.c  OLED_LVGL.ioc  OLED_print.c  STM32L4R5VITX_FLASH.ld  STM32L4R5VITX_RAM.ld  WorkingUARTSend.c  combinedCode.c  demoRecieve.c  flashReadingAndWriting.c  main.c  messages.h  packets.h  receivePacketTest.c  sendPacketTest.c  workingDMARecieve.c  workingFlashReadWrite.c
Core/Inc/: Display_drivers.h  LVGL_drivers.h  keypad.h  main.h  menu.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: Display_drivers.c  LVGL_drivers.c  keypad.c  main.c  menu.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Debug/: makefile  objects.list  sources.mk
Debug/Core/Src/: Display_drivers.cyclo  Display_drivers.su  LVGL_drivers.cyclo  LVGL_drivers.su  keypad.cyclo  keypad.su  main.cyclo  main.su  menu.cyclo  menu.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.su  (+3 more)
Drivers/UI_files/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Drivers/UI_files/components/: ui_comp_hook.c
Drivers/UI_files/screens/: ui_add_waypoint.c  ui_del_waypoint.c  ui_enter_message.c  ui_enter_message_blank.c  ui_main_beacons.c  ui_main_messages.c  ui_main_waypoints.c  ui_message_beacon.c  ui_sub_beacon1.c  ui_sub_beacon2.c  ui_sub_beacon3.c  ui_sub_beacon4.c  ui_sub_message1.c  ui_sub_message2.c  ui_sub_message3.c  ui_sub_message4.c  ui_sub_waypoint1.c  ui_sub_waypoint2.c  ui_sub_waypoint3.c  ui_track_beacon.c  ui_track_waypoint.c  ui_tracking_e.c  ui_tracking_n.c  ui_tracking_s.c  ui_tracking_w.c  ui_view_message.c
(+188 files in other folders)
